--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <!-- <h1>Ласкаво просимо до Горнєтко Кави</h1> -->
         <nav class="nav">
-            <a href="#">            <img src="/347614823_761813815434928_5543709336373953909_n-PhotoRoom.png-PhotoRoom.png" alt="logo" class="logo">
+            <a href="#">            <img src="/logo.png" alt="logo" class="logo">
             </a>
             <ul>
                 <li><a href="#about">Про нас</a></li>
