--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section id="menu">
         <h2>Меню</h2>
         <div class="menu-item">
-            <img src="barista.png" alt="Кава 1">
+            <img src="coffee_laptop.jpg" alt="Кава 1">
             <h3>Ароматна кава</h3>
             <img src="" alt="">
             <p>Насолоджуйтесь справжньою ароматною кавою з різними смаками.</p>
